--- a/core/res/res/values/pa_symbols.xml
+++ b/core/res/res/values/pa_symbols.xml
@@ -29,4 +29,11 @@
   <java-symbol type="string" name="global_action_screenshot" />
   <java-symbol type="string" name="reboot_confirm" />
   <java-symbol type="string" name="reboot_progress" />
+
+   <!--Setting confirmation dialog-->
+  <java-symbol type="id" name="setting_confirmation_dialog_visual_hint" />
+  <java-symbol type="layout" name="setting_confirmation_dialog" />
+  <java-symbol type="string" name="setting_confirmation_ask_me_later" />
+  <java-symbol type="string" name="setting_confirmation_yes" />
+  <java-symbol type="string" name="setting_confirmation_no" />
 </resources>
