--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -20,9 +20,6 @@
     <!--Screenshot delete -->
     <string name="screenshot_delete_action">Delete</string>
     <string name="screenshot_delete_confirmation">Screenshot deleted</string>
-    <!-- Quick pulldown confirmation dialog -->
-    <string name="quick_settings_quick_pull_down_title">Quick pull down</string>
-    <string name="quick_settings_quick_pull_down_message">Would you like the edge of the status bar to pull down quick settings?</string>
     <!-- QS Battery Tile -->
     <string name="quick_settings_battery_charging">Charging</string>
     <string name="quick_settings_battery_discharging">Discharging</string>
@@ -47,7 +44,7 @@
     <!-- QuickSettings: Lightbulb tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_lightbulb_label">Lightbulb</string>
     <string name="quick_settings_lightbulb_off_label">Lightbulb Off</string>
-    <!-- USB Tether Tile [CHAR LIMIT=NONE] -->
+    <!-- QuickSettings: USB Tether Tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_usb_tether_connected_label">USB Tethering Off</string>
     <string name="quick_settings_usb_tether_on_label">USB Tethering</string>
     <!-- QuickSettings: Sleep Tile [CHAR LIMIT=NONE] -->
@@ -63,15 +60,26 @@
     <!-- QuickSettings: Wifi AP Tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_wifi_ap_label">Wi-Fi AP</string>
     <string name="quick_settings_wifi_ap_off_label">Wi-Fi AP Off</string>
-    <!-- Quick Settings Bluetooth Extra Tile [CHAR LIMIT=NONE] -->
+    <!-- QuickSettings: Bluetooth Extra Tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_bluetooth_not_discoverable_label">Not discoverable</string>
     <string name="quick_settings_bluetooth_discoverable_label">Discoverable</string>
     <string name="quick_settings_bluetooth_disabled">Disabled</string>
-    <!-- Quick Settings Location Extra Tile [CHAR LIMIT=NONE] -->
+    <!-- QuickSettings: Location Extra Tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_location_mode_high_label">High</string>
     <string name="quick_settings_location_mode_battery_label">Battery</string>
     <string name="quick_settings_location_mode_sensors_label">Device</string>
-    <!-- On-the-spot preferences -->
+    <!-- QuickSettings: Sound Tile  -->
+    <string name="quick_settings_ringer_mode_silent_label">Silent</string>
+    <string name="quick_settings_ringer_mode_vibrate_label">Vibrate</string>
+    <string name="quick_settings_ringer_mode_normal_label">Sound</string>
+    <string name="quick_settings_ringer_mode_normal_vibrate_label">Sound &amp; Vibration</string>
+    <string name="quick_settings_volume_label">Volume</string>
+
+    <!-- Quick pulldown confirmation dialog -->
+    <string name="quick_settings_quick_pull_down_title">Quick pull down</string>
+    <string name="quick_settings_quick_pull_down_message">Would you like the edge of the status bar to pull down quick settings?</string>
+
+    <!-- Names to be shown on settings, they must match with Settings.SETTINGS_TO_RESET array -->
     <string name="quick_settings_quick_pull_down">@string/quick_settings_quick_pull_down_title</string>
     <string name="safe_headset_volume">@*android:string/safe_headset_warning_title</string>
 </resources>
