--- a/packages/SystemUI/res/values-es/pa_strings.xml
+++ b/packages/SystemUI/res/values-es/pa_strings.xml
@@ -19,8 +19,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="screenshot_delete_action">Borrar</string>
     <string name="screenshot_delete_confirmation">Captura de pantalla eliminada</string>
-    <string name="quick_settings_quick_pull_down_title">Despliegue rápido</string>
-    <string name="quick_settings_quick_pull_down_message">¿Le gustaría que el borde de la barra de notificaciones despliegue el panel de ajustes rápidos?</string>
     <string name="quick_settings_battery_charging">Cargando</string>
     <string name="quick_settings_battery_discharging">Descargando</string>
     <string name="quick_settings_immersive_global_on_label">Inmersión</string>
@@ -54,4 +52,8 @@
     <string name="quick_settings_location_mode_high_label">Alta</string>
     <string name="quick_settings_location_mode_battery_label">Batería</string>
     <string name="quick_settings_location_mode_sensors_label">Dispositivo</string>
+    <string name="quick_settings_quick_pull_down_title">Despliegue rápido</string>
+    <string name="quick_settings_quick_pull_down_message">¿Le gustaría que el borde de la barra de notificaciones despliegue el panel de ajustes rápidos?</string>
+    <string name="enable_pie_control_title">Controles circulares</string>
+    <string name="enable_pie_control_message">¿Le gustaría utilizar los controles circulares en el modo inmersivo?</string>
 </resources>
